# DMCompiler

./: .gitignore  CMakeLists.txt  Directory.Build.props  Directory.Packages.props  LICENSE.md  README.md  SConstruct  debug_tokens.cpp
DMStandard/: Defines.dm  UnsortedAdditions.dm  _Standard.dm
DMStandard/Types/: AList.dm  Callee.dm  Client.dm  Database.dm  Datum.dm  Exception.dm  Filter.dm  Icon.dm  Image.dm  List.dm  Matrix.dm  Mutable_Appearance.dm  PixLoc.dm  Regex.dm  Savefile.dm  Sound.dm  Vector.dm  World.dm
DMStandard/Types/Atoms/: Area.dm  Mob.dm  Movable.dm  Obj.dm  Turf.dm  _Atom.dm
include/: BytecodeWriter.h  DMAST.h  DMASTExpression.h  DMASTFolder.h  DMASTStatement.h  DMBuiltinRegistry.h  DMCodeTree.h  DMCodeTreeBuilder.h  DMCompiler.h  DMConstants.h  DMDisassembler.h  DMExpressionCompiler.h  DMLexer.h  DMMParser.h  DMObject.h  DMObjectTree.h  DMParser.h  DMPreprocessor.h  DMProc.h  DMReference.h  DMStatementCompiler.h  DMValueType.h  DMVariable.h  DreamPath.h  DreamProcOpcode.h  JsonWriter.h  Lexer.h  Location.h  OpcodeDefinitions.h  Token.h  TokenStreamDMLexer.h  TokenStreamLexer.h
src/: BytecodeEmitter.cpp  BytecodeWriter.cpp  DMAST.cpp  DMASTExpression.cpp  DMASTFolder.cpp  DMBuiltinRegistry.cpp  DMCodeTree.cpp  DMCodeTreeBuilder.cpp  DMCompiler.cpp  DMDisassembler.cpp  DMExpression.cpp  DMExpressionCompiler.cpp  DMLexer.cpp  DMMParser.cpp  DMObject.cpp  DMObjectTree.cpp  DMParser.cpp  DMPreprocessor.cpp  DMProc.cpp  DMStatementCompiler.cpp  DMValueType.cpp  DMVariable.cpp  DreamPath.cpp  JsonOutput.cpp  JsonWriter.cpp  Lexer.cpp  Location.cpp  OpcodeDefinitions.cpp  Token.cpp  disassembler_main.cpp  main.cpp
test_files/: error_recovery_test.dm
testdata/: builtin_errors.dm  comprehensive_error_test.dm  error_handling_test.dm  error_handling_test2.dm  input_test.dm  pick_error.dm  preprocessor_error_test.dm  simple_input_test.dme  simple_type_error.dm  switch_range_test.dm  switch_range_test.dme  type_path_value_error.dm
tests/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  DMCompilerCpp.sln  DMCompilerLib.vcxproj  DMCompilerLib.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  debug_lexer.cpp  dmcompiler.vcxproj  dmcompiler.vcxproj.filters  dmdisasm.vcxproj  dmdisasm.vcxproj.filters  example_compilation_tests.cpp  test_bare_new_driver.cpp  test_builtin_registry.cpp  test_bytecode.cpp  test_bytecode_writer.cpp  test_compiler.cpp  test_continue_in_switch_driver.cpp  test_debug_proc.cpp  test_disassembler.cpp  test_dmmparser.cpp  test_dmvaluetype.cpp  test_expression_compiler.cpp  test_for_in_parser.cpp  test_goto_forward_ref.cpp  test_input_builtin.cpp  test_istype_variadic.cpp  test_lexer.cpp  test_lexer_debug.cpp  test_lexer_tokens.cpp  test_main.cpp  test_objecttree.cpp  test_parser.cpp  test_path_resolution.cpp  (+13 more)
tests/test_files/: include_test_include.dm  include_test_main.dm
tests/testdata/: var_type_flags.dm  var_type_flags.json  var_type_flags_comprehensive.dm  var_type_flags_comprehensive.json  var_type_flags_edge_cases.dm  var_type_flags_edge_cases.json
tests/testdata/bitwise_compare_test/: test.dm  test.json
tests/testdata/bitwise_test/: test.dm  test.json
tests/testdata/debug_test/: test.dm  test.json
tests/testdata/macro_expansion_test/: test.dm  test.json
tests/testdata/precedence_test/: test.dm  test.json
tests/testdata/preprocessor_test/: main.json  test.dm  test.json
tests/testdata/preprocessor_test/code/: objects.dm
tests/testdata/simple_test/: test.dm  test.dme  test.json
tests/tests/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  dm_compiler_tests.vcxproj  dm_compiler_tests.vcxproj.filters
tests/tests/test_files/: preprocessor_test.dm
tests/tests/testdata/preprocessor_test/: main.dme
tests/tests/testdata/preprocessor_test/code/: procs.dm
